--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
         "icon": "$(play)"
       },
       {
+        "command": "makeup.runTargetByName",
+        "title": "Run Make Target by Name"
+      },
+      {
         "command": "makeup.refreshTargets",
         "title": "Refresh Make Targets",
         "icon": "$(refresh)"
